# Ned_Datascience_ML_Final-Project

./: README.md  compose.yml
Back_end/: pyproject.toml
Back_end/back_end/: main.py
Back_end/tests/: pytest.py
Front_end/front_end/: main.py
Kong/: compose.yml
Kong/FRONTEND/: Dockerfile.dev  pyproject.toml
Kong/FRONTEND/frontend/: main.py
Kong/todo/app/: main.py
